# datachat

./: .env.example  .gitignore  CLAUDE.md  CODEBASE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  demo.db  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: chat.py  connections.py  dashboards.py  health.py  schema.py
backend/app/connectors/: base.py  postgresql.py  registry.py  sqlite.py
backend/app/core/: exceptions.py
backend/app/core/interfaces/: connector.py  llm_provider.py
backend/app/core/models/: annotations.py  chat.py  clarification.py  connection.py  dashboard.py  query.py  schema.py
backend/app/llm/: anthropic_provider.py  base.py  litellm_provider.py  openai_provider.py  registry.py
backend/app/repositories/: annotations_repo.py  connection_repo.py  dashboard_repo.py  query_repo.py
backend/app/services/chat/: service.py
backend/app/services/clarification/: service.py
backend/app/services/dashboard/: service.py
backend/app/services/nl2sql/: prompt_builder.py  result_formatter.py  service.py  sql_executor.py  sql_validator.py
backend/app/services/schema/: service.py
backend/app/utils/: crypto.py  logging.py
backend/app/vector_store/: memory_store.py
backend/tests/: conftest.py
backend/tests/unit/: test_prompt_builder.py  test_result_formatter.py  test_sql_validator.py
docs/: index.md
docs/architecture/: data-flow.md  overview.md  security-model.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
(+47 files in other folders)
