[project]
name = "datachat-backend"
version = "0.1.0"
description = "DataChat backend — LLM-powered database interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "litellm>=1.40.0",
    "anthropic>=0.25.0",
    "qdrant-client>=1.9.0",
    "sqlglot>=23.0.0",
    "cryptography>=42.0.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pandas>=2.2.0",
    "duckdb>=0.10.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
